# principles

./: .travis.yml  MainWindow.vala  README.md  com.github.cassidyjames.principles.yml  meson.build
.github/workflows/: ci.yml  release.yml
data/: Application.css  com.github.cassidyjames.principles.appdata.xml  com.github.cassidyjames.principles.appdata.xml.in  com.github.cassidyjames.principles.desktop  com.github.cassidyjames.principles.desktop.in.in  com.github.cassidyjames.principles.gschema.xml  gresource.xml  gschema.xml  launcher.desktop.in  meson.build
debian/: changelog  control  copyright  rules
po/: POTFILES.in  README.md  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  com.github.cassidyjames.principles.pot  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  (+159 more)
src/: Application.vala  Content.vala  MainWindow.vala
src/Widgets/: ModeSwitch.vala
